# healthglitterr

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALLATION.md  Makefile  README.md  README_DOCKER.md  TESTING_GUIDE.md  docker-compose.yml  main.py  pip.conf  pip.ini  requirements.txt  run-tests.ps1  run_health_tests.bat  run_health_tests.ps1  setup.ps1  setup.sh
Prompts/: perceive_prompt  schema
agentic-medical-health-review/: ENV_SETUP_GUIDE.md  INSTALL.md  pyproject.toml  pytest.ini  user_registry.json
agentic-medical-health-review/app/: README.md  __init__.py  config.py  container.py  logging_config.py  main.py
agentic-medical-health-review/app/api/: __init__.py
agentic-medical-health-review/app/domain/: __init__.py
agentic-medical-health-review/docs/: 0_README_week1.md  0_README_week2.md  0_agent_problem_context.md  1_agent_states.md  2_state_diagram.mmd  3_agent_io_contract.md  4_agent_tools.md  4_aget_tools.md  5_agent_pompts.md  Agentic_AI_Project_Planning.docx  README_week1.md  state_diagram.mmd
agentic-medical-health-review/models/: __init__.py  database_connection.py  lab_parameter.py  mismatch_result.py  normalization_result.py  normalized_parameter.py  trend_result.py
agentic-medical-health-review/prompts/: README_PROMPT_MANAGEMENT.md  perceive_prompt.py  perceive_prompt_old copy.py  system_prompt.md  system_prompt.py  tool_medical_report_extraction_prompt.md
agentic-medical-health-review/tests/: test_prompts.md
agentic-medical-health-review/tools/: health_input_validator copy.py  health_input_validator.py  user_registry.json
(+102 files in other folders)
