[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-medical-health-review"
version = "0.1.0"
description = "Agentic Medical Health Review System"
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here as needed
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "tools*", "agents*", "prompts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
